kustomize/gateway/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ${gateway_name}
  namespace: system-gateway
spec:
  gatewayClassName: ${gateway_class_name}
  listeners:
    - name: web-http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: web-https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: ${gateway_name}-web-tls
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
